--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://community.multireligionvalsystem.eu.org/2025/01/the-question-is-whether-world-jewish.html"
+    "@id": "https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/"
   },
   "headline": "is the World Jewish Congress (WJC) is a religious or political organization",
   "description": "How to solve a most complex and controversial issues in the world ?",
@@ -41,11 +41,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
    <meta charset="utf-8">
-  <title>Fattiga ländernas och industriländernas toppdomän |Discover the power of cctlds </title>
+  <title>Fattiga ländernas-EU-medborgarinitiativ |Discover the power of cctlds </title>
     <meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Discover the power of cctlds-Why the flags of the nations wave with religious symbols over the EU, UN and NATO therefore it is important to replace the religious symbols with the countries' own ccTLDs ?">
-  <meta name="keywords" content="Discover the power of cctlds-Polling station close to me,The top-level domain of poor countries and industrialized countries,Tre reformer som förändrar världen, Religions for peace ">
+  <meta name="description" content="EU-medborgarinitiativ-Discover the power of cctlds-Why the flags of the nations wave with religious symbols over the EU, UN and NATO therefore it is important to replace the religious symbols with the countries' own ccTLDs ?">
+  <meta name="keywords" content="EU-medborgarinitiativ-Discover the power of cctlds-Polling station close to me,The top-level domain of poor countries and industrialized countries,Tre reformer som förändrar världen, Religions for peace ">
   <meta name="Multireligionval" content="Discover the power of cctlds-How to Implement a replace these symbols with the countries' own ccTLDs: A Step-by-Step Guide ">
   <meta name="robots" content="index, follow"><link rel="canonical" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/">
   <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/bootstrap3.min.css">
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="rule">
           <hr>
         </div>
-        <h1 class="main-heading">Fattiga ländernas och <span class="pink-h">industriländernas toppdomän-Discover the power of cctlds</span>
+        <h1 class="main-heading">Fattiga ländernas, EU-medborgarinitiativ <span class="pink-h">Discover the power of cctlds</span>
         </h1>
         <div class="rule">
           <hr>
@@ -113,22 +113,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="rule">
           <hr>
         </div>
-        <p class="paragraph header-paragraph">Investeringsprojekt för flyktingar att tillämpas vid återvändandet och återuppbyggandet-Discover the power of cctlds</p>
+        <p class="paragraph header-paragraph">EU-medborgarinitiativ-<a href="https://multireligionvalsystem.eu.org/investeringsprojekt-f%C3%B6r-flyktingar/" title="Läs vidare om investeringsprojekt för flyktingar">Investeringsprojekt för flyktingar</a> att tillämpas vid återvändandet och återuppbyggandet-Discover the power of cctlds</p>
       </header>
     </div>
   </div>
   <div class="row about-row">
     <div class="col-xs-12">
-      <h1>- <span class="heading-text-9">Debatt om religiösa symboler på flaggor vs. CcTLDs-Discover the power of cctlds </span>
+      <h1>- <span class="heading-text-9"><p style="text-align: left"></p>Debatt om <a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO" title="Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? ">religiösa symboler på flaggor</a>over the EU, UN and NATO  </span>
       </h1>
       <div class="rule dark-rule">
         <hr>
       </div>
-      <p class="paragraph">Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? <br>It's important to replace these symbols with the countries' own ccTLDs. This change would make the flags more meaningful and respectful. <a title="" href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen" class="link"><br>
-          Debatt om religiösa symboler på flaggor vs. ccTLDs. Discover the power of cctlds<br>
+      <p class="paragraph"><p style="text-align: left"></p>Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? <br>It's important to replace these symbols with the countries' own ccTLDs. This change would make the flags more meaningful and respectful. <a title="" href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen" class="link"><br>
+          <p style="text-align: left"></p>Debatt om religiösa symboler på flaggor vs. ccTLDs. Discover the power of cctlds<br>
 
 Översikt<br>
-Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.</p>
+Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.Här kan du läsa om vårt EU-medborgarinitiativ,
+Du som är <a href="https://multireligionvalsystem.eu.org/eu-medborgarinitiativ/" title="EU-medborgarinitiativ">EU-medborgare</a> i vilket EU-land som helst vänligen <a href="https://multireligionvalsystem.eu.org/eu-medborgarinitiativ/" title="EU-medborgarinitiativ">sprid detta till andra EU-medborgare</a>.</p>
     </div>
     <div class="col-xs-12 team-column">
       <div class="container-fluid team-member-container">
@@ -140,7 +141,7 @@ Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationell
           </picture>
         </div>
         <h4 class="team-name"> Discover the power of cctlds </h4>
-        <p class="paragraph">Argument mot och för religiösa symboler på flaggor
+        <p class="paragraph"><p style="text-align: left"></p>Argument mot och för religiösa symboler på flaggor
 
 #Kulturarv
 
@@ -156,8 +157,8 @@ Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Ti
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/7356a8bf-0294-4261-80bd-a61bc76a1f26.png"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">Argument för religiösa symboler på flaggor</h4>
-        <p class="paragraph">#Nationell identitet
+        <h4 class="team-name"><p style="text-align: left"></p>Argument för religiösa symboler på flaggor</h4>
+        <p class="paragraph"><p style="text-align: left"></p>#Nationell identitet
 Religiösa symboler kan förena medborgare under ett gemensamt trossystem och stärka den nationella identiteten. De symboliserar de värderingar som formar en nations karaktär.
 #Globalt erkännande
 Flaggor med ccTLDs förbättrar en nations synlighet och erkännande på den <a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO" title="Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? It's important to replace these symbols with the countries' own ccTLDs.">internationella scenen</a> och framhäva sociokulturella attribut.&nbsp;.</p>
@@ -172,11 +173,11 @@ Flaggor med ccTLDs förbättrar en nations synlighet och erkännande på den <a 
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/review-2.jpg"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">Motargument till religiösa symboler på flaggor</h4>
-        <p class="paragraph">### Sekularism och inkludering
+        <h4 class="team-name"><p style="text-align: left"></p>Motargument till religiösa symboler på flaggor</h4>
+        <p class="paragraph"><p style="text-align: left"></p>### Sekularism och inkludering
 I sekulära samhällen ska <a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs" title="istand och ccTLDs">flaggor representera alla medborgare</a> oavsett religiös tillhörighet. Religiösa symboler kan alienera icke-troende och undergräva en inkluderande nationell identitet.
 #Nationell suveränitet vs. religiös identitet
-Att betona religiös tillhörighet kan överskugga bredare nationella identiteter. En sekulär flagga skulle kunna främja enighet bland olika befolkningar.</p>
+Att betona religiös tillhörighet kan överskugga bredare nationella identiteter.<a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs" title="Bistand-och-ccTLDs"> En sekulär flagga </a>skulle kunna främja enighet bland olika befolkningar.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/demokratin" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
@@ -188,9 +189,9 @@ Att betona religiös tillhörighet kan överskugga bredare nationella identitete
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/e5278b24-1a3a-4717-9abe-9f473736d278.jpeg 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">#Digital modernisering-thiopia africa flag ,
+        <h4 class="team-name"><p style="text-align: left"></p>#Digital modernisering-thiopia africa flag ,
 Flag of Ethiopia</h4>
-        <p class="paragraph">Att introducera ccTLDs skulle kunna spegla ett modernt förhållningssätt till nationell identitet i en digital värld. ccTLD:er blir allt mer relevanta i ett globaliserat sammanhang, och främjar en distinkt digital närvaro framför traditionella symboler..</p>
+        <p class="paragraph"><p style="text-align: left"></p>Att introducera ccTLDs skulle kunna spegla ett modernt förhållningssätt till nationell identitet i en digital värld. ccTLD:er blir allt mer relevanta i ett globaliserat sammanhang, och främjar en distinkt digital närvaro framför traditionella symboler..</p>
         <div class="container-fluid team-social-box"><a href="#" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="https://www.facebook.com/groups/Multireligionvalsystemet/" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
          <svg width="50%" height="50%" viewBox="0 0 9055 4092" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;">
@@ -864,7 +865,7 @@ Hur ser samerna på den nya flaggan ?!
         <h1 class="strategy-heading"><span class="heading-text-8">konflikten</span>&nbsp;övergången till ccTLD:er ta hänsyn till varje nations sociopolitiska sammanhang, demografiska mångfald och den nationella identitetens framväxande karaktär  </h1>
         <p class="paragraph strategy-p">Detta är ett spännande ämne som överbryggar nationalism, identitet och religiösa symbolers roll i internationella organisationer. Jag kommer att presentera argument för båda sidor av debatten angående förekomsten av religiösa symboler på nationella flaggor kontra att ersätta dem med landskod på toppdomäner (ccTLDs). &nbsp;<br>
           Därför utgår vi från att Israel-Palestina-konflikten är av
-religiös art och icke av politisk, ekonomisk eller social art. </p>
+religiös art och icke av politisk, ekonomisk eller social art.EU-medborgarinitiativ </p>
       </div>
       <div class="container-fluid strategy-image-container" id="flex-container-2"></div>
     </div>
@@ -885,7 +886,7 @@ religiös art och icke av politisk, ekonomisk eller social art. </p>
       </div>
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-piggy-bank"></i></span>
         <h4 class="spotlight-heading">Political Practices in Exile</h4>
-        <p class="paragraph">IT-bolag.</p>
+        <p class="paragraph">IT-bolag.eu-medborgarinitiativ</p>
       </div>
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-shield-check"></i></span>
         <h4 class="spotlight-heading">De fattigländernas ccTLDs </h4>
@@ -926,7 +927,8 @@ representerar varje lands medborgare oavsett religion.</p>
   <div class="row footer-row">
     <div class="col-xs-12">
       <p class="paragraph footer-paragraph">Political Practices in Exile <span class="paragraph-text-2">&nbsp;Three reforms that change the world </span>Copyright © F.D.U</p>
-    </div>
+    </div><p style="text-align: left"></p> <a href="https://multireligionvalsystem.eu.org/eu-medborgarinitiativ/" title="eu-medborgarinitiativ">Här kan du läsa om vårt EU-medborgarinitiativ,
+Du som är EU-medborgare i vilket EU-land som helst vänligen sprid detta till andra EU-medborgare</a>.
   </div>
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/jquery.min.js"></script>
   <script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/bootstrap.min.js"></script>
@@ -1002,4 +1004,6 @@ transform: none !important;
 
 
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97a8fce2684349cd',t:'MTc1NzEwOTUwNA=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"90fdef7da9c745b9921b35c565174988","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
-</body></html>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"90fdef7da9c745b9921b35c565174988","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9887e3e38e790d2b',t:'MTc1OTQ0NjgwNQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body></html>
+
