--- a/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/index.html
+++ b/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/index.html
@@ -28,15 +28,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
  <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
  <meta charset="utf-8">
- <meta name="ÖIr" content="Vad är överideologi , överidiologin gäntemot andra ideologier
-vår överideologi , överidiologin gäntemot andra ideologier
-om överideologi , överidiologin gäntemot andra ideologier
-inom överideologi , överidiologin gäntemot andra ideologier">
+ <meta name="ÖIr" content="Ny flaggdesign ">
  <meta name="FDU" content="https://fdu.multireligionvalsystem.eu.org/flaggdesign-cctlds/xr_files.txt">
- <title>flaggdesign-cctlds, Redesigning Religious and Complex Symbols on Flags at the UN, EU, and NATO</title>
-  <meta name="robots" content="index, follow"><link rel="canonical" href="https://fdu.multireligionvalsystem.eu.org/flaggdesign-cctlds/flaggdesign-cctlds.html/">
-<meta content="How to solve a most complex and controversial issues in the world ?" name="description">
-<link href="https://fdu.multireligionvalsystem.eu.org/flaggdesign-cctlds/flaggdesign-cctlds.html" rel="canonical">
+ <title>Ny flaggdesign, Redesigning Religious and Complex Symbols on Flags at the UN, EU, and NATO</title>
+  
+<meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
+<meta name="keywords" content="Investeringsprojekt, Ny flaggdesign, Redesigning Religious and Complex Symbols on Flags at the UN, EU, and NATO ,Fattiga ländernas toppdomän,Discover the power of cctTLDs, "/>
+<meta content="Ny flaggdesign ?" name="description">
+<link href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO" rel="canonical">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/xr_fonts.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
  <script><!--
@@ -137,3 +136,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </body></html>
+
