--- a/The-flags-of-the-world/index.htm
+++ b/The-flags-of-the-world/index.htm
@@ -17,9 +17,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <meta name="author" content="Podcast FDU">
 				<meta name="copyright" content="© 2014–2025 FDU">
                 <meta name="HandheldFriendly" content="true">
-				    <title>The flags of the world | Discover the power of cctTLDs.</title>
+				    <title>The flags of the world | Ny flaggdesign</title>
                     <meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
  <link rel="canonical" href="https://multireligionvalsystem.eu.org/The-flags-of-the-world/">
+	<meta name="keywords" content="Investeringsprojekt, EU-medborgarinitiativ, Ny flaggdesign ,Fattiga ländernas toppdomän,Discover the power of cctTLDs, "/>
+
 				<meta name="referrer" content="origin-when-crossorigin">
 				<link rel="manifest" href="https://podcastaddict.com/manifest.webmanifest">
 				<link rel="icon" type="image/svg+xml" href="https://podcastaddict.com/res/images/icon-512x512.png">
@@ -914,4 +916,5 @@ design. The flags of the three differe.Fattiga ländernas toppdomän -Discover t
 
 <blockquote class="reddit-embed-bq" style="height:316px" data-embed-height="316"><a href="https://www.reddit.com/user/Eumedborgarinitiativ/comments/1lhrllc/var_det_vid_det_hemliga_natom%c3%b6tet_p%c3%a5_grand_hotell/">Var det vid det hemliga NATO-mötet på Grand hotell i Stockholm i närvarno av Kristersson och Andersson som beslut fattades att de har tolkningsföreträde av folkrätten och får begå miljöbrott , med argumentet att Iran inte får tillverka kärnvapen och det beslutades att slå mot Iran vilket har gjort a</a><br> by<a href="https://www.reddit.com/user/Eumedborgarinitiativ/">u/Eumedborgarinitiativ</a> in<a href="https://www.reddit.com/user/Eumedborgarinitiativ/">u_Eumedborgarinitiativ</a></blockquote><script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script>
         <code><iframe src="https://creators.spotify.com/pod/profile/de-nya-svenskarna/embed/episodes/Frgan-r-huruvida-det-r-den-judisk-kristna-politiska-alliansen-som-har-tilltit-att-den-77-r-gamla-Israel-Palestinakonflikten-inte-kunnat-lsas-e35jri1/a-ac275cu" height="102px" width="400px" frameborder="0" scrolling="no"></iframe></code> event.
+
 </body></html>
