--- a/en-ny-flaggindustri.html
+++ b/en-ny-flaggindustri.html
@@ -7,21 +7,23 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N3QBH8LM');</script>
+})(window,document,'script','dataLayer',''GTM-MMV2S7Z6');</script>
 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-N3QBH8LM');
+  gtag('config', 'G-ZEYBPG1S4Y');
 </script>
  <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
  <meta charset="utf-8">
  <meta name=" IT-infrastrukturen" content="En nya flaggdesignindustrin">
  <meta name="Flaggdesignindustrins" content="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_files.txt">
- <title>Flaggdesignindustrin |ccTLDs</title>
- <link href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" rel="canonical">
+ <title>Flaggdesignindustrin |Ny flaggdesign</title>
+  <meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
+<meta name="keywords" content="Investeringsprojekt, .ua, EU-medborgarinitiativ, Ny flaggdesign ,Ukraina, Fattiga ländernas toppdomän,Discover the power of cctTLDs, "/>
+ <link href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/en-ny-flaggindustri.html" rel="canonical">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_fonts.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
  <script><!--
@@ -162,3 +164,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 </body></html>
+
